--- a/kubernetes-intro/web-pod.yaml
+++ b/kubernetes-intro/web-pod.yaml
@@ -8,6 +8,13 @@ spec:
   containers:
   - name: web
     image: somikhaylov/python_web:1.0
+    readinessProbe:       # проверка готовности
+      httpGet:            # веб-сервера отдавать
+        path: /index.html # контент
+        port: 8000
+    livenessProbe:
+      tcpSocket:
+        port: 8000
     volumeMounts:
     - name: app
       mountPath: /app
