--- a/kubernetes-templating/cert-manager/cluster-issuer.yaml
+++ b/kubernetes-templating/cert-manager/cluster-issuer.yaml
@@ -1,19 +1,15 @@
 apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-production
+  name: letsencrypt-staging
 spec:
   acme:
-    # You must replace this email address with your own.
-    # Let's Encrypt will use this to contact you about expiring
-    # certificates, and issues related to your account.
-    email: somikhaylov@yandex.ru
+    # The ACME server URL
     server: https://acme-staging-v02.api.letsencrypt.org/directory
+    # Email address used for ACME registration
+    email: somikhaylov@yandex.ru
+    # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
-      # Secret resource used to store the account's private key.
-      name: example-issuer-account-key
-    # Add a single challenge solver, HTTP01 using nginx
-    solvers:
-    - http01:
-        ingress:
-          class: nginx
+      name: letsencrypt-staging
+    # Enable the HTTP-01 challenge provider
+    http01: {}
