--- a/kubernetes-templating/chartmuseum/values.yaml
+++ b/kubernetes-templating/chartmuseum/values.yaml
@@ -4,10 +4,10 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
-    certmanager.k8s.io/cluster-issuer: "letsencrypt-production"
+    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
     certmanager.k8s.io/acme-challenge-type: http01
   hosts:
-    - name: chartmuseum.192.168.122.100.nip.io
+    - name: chartmuseum.35.198.84.6.xip.io
       path: /
       tls: true
-      tlsSecret: chartmuseum.192.168.122.100.nip.io
+      tlsSecret: chartmuseum.35.198.84.6.xip.io
