--- a/kubernetes-templating/harbor/values.yaml
+++ b/kubernetes-templating/harbor/values.yaml
@@ -1,12 +1,17 @@
+---
 expose:
   type: ingress
   tls:
-    enabled: false
+    enabled: true
+    secretName: "harbor.35.198.84.6.xip.io"
   ingress:
     hosts:
-      core: harbor.192.168.122.100.nip.io
+      core: harbor.35.198.84.6.xip.io
+    controller: default
     annotations:
       kubernetes.io/ingress.class: nginx
-
+      kubernetes.io/tls-acme: "true"
+      certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
+      certmanager.k8s.io/acme-challenge-type: http01
 notary:
   enabled: false
