--- a/kubernetes-templating/socks-shop/requirements.yaml
+++ b/kubernetes-templating/socks-shop/requirements.yaml
@@ -2,3 +2,6 @@ dependencies:
   - name: frontend
     version: 0.1.0
     repository: "file://../frontend"
+  - name: mysql
+    version: 0.1.0
+    repository: "file://../mysql"
